test/assets/invalid/expect-tuple.hs
-- Expected a tuple, got a list
a  = fst ['a', 'b']